[PBW-4437] fix for selecting closed captions on small screen

--- a/scss/responsive/_large.scss
+++ b/scss/responsive/_large.scss
@@ -75,6 +75,10 @@
           padding: 3px 12px;
         }
       }
+      .flexcontainer {
+        -webkit-flex-flow: row wrap;
+        flex-flow: row wrap;
+      }
       .discoverBtn {
         span.icon {
           font-size: 1.2em;
